welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: unclosed character literal
var message: string =''
                     ^BDRBuggle:3: error: unclosed character literal
while (message!='') {
                ^BDRBuggle:41: error: unclosed character literal
  message=''
          ^BDRBuggle:1: error: illegal start of simple expression
var message: string =''
                     ^BDRBuggle:3: error: ')' expected but something found.
while (message!='') {
                ^BDRBuggle:45: error: illegal start of simple expression
	}
        ^